--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: db/development.postgresql
+  database: nedjer_development#db/development.postgresql
   pool: 5
   timeout: 5000
 
@@ -14,12 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/test.postgresql
+  database: nedjer_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: db/production.postgresql
+  database: nedjer_production
   pool: 5
   timeout: 5000
